--- a/2.html
+++ b/2.html
@@ -3,15 +3,14 @@
 <head>
 <title>framed page</title>
 <frameset cols="50%,50%" rows="25%,25%,25%,25%" >
-<frame src="doc1.html">
-<frame src="doc2.html">
-<frame src="hello">
-<frame src="">
-<frame src="">
-<frame src="">
-<frame src="">
-<frame src="">
-<!-- <noframes><p>dhdhb</p></noframes> -->
-</frameset>
-</head>
-</html>
+    <frame src="doc1.html">
+        <frame src="doc2.html">
+            <frame src="https://www.javatpoint.com/">
+                <frame src="https://www.kiet.edu/">
+                    <frame src="">
+                        <frame src="">
+                            <frame src="">
+                                <frame src="">
+                                </frameset>
+                                </head>
+                                </html>
